source/references/2.7.23/man/master.markdown
---
layout: default
nav: references_man.html
title: puppet master Man Page
---

<div class='mp'>
<h2 id="NAME">NAME</h2>
<p class="man-name">
  <code>puppet-master</code> - <span class="man-whatis">The puppet master daemon</span>
</p>

<h2 id="SYNOPSIS">SYNOPSIS</h2>

<p>The central puppet server. Functions as a certificate authority by
default.</p>

<h2 id="USAGE">USAGE</h2>

<p>puppet master [-D|--daemonize|--no-daemonize] [-d|--debug] [-h|--help]
  [-l|--logdest <var>file</var>|console|syslog] [-v|--verbose] [-V|--version]
  [--compile <var>node-name</var>]</p>

<h2 id="DESCRIPTION">DESCRIPTION</h2>

<p>This command starts an instance of puppet master, running as a daemon
and using Ruby's built-in Webrick webserver. Puppet master can also be
managed by other application servers; when this is the case, this
executable is not used.</p>

<h2 id="OPTIONS">OPTIONS</h2>

<p>Note that any configuration parameter that's valid in the configuration
file is also a valid long argument. For example, 'ssldir' is a valid
configuration parameter, so you can specify '--ssldir <var>directory</var>' as an
argument.</p>

<p>See the configuration file documentation at
http://docs.puppetlabs.com/references/stable/configuration.html for the
full list of acceptable parameters. A commented list of all
configuration options can also be generated by running puppet master
with '--genconfig'.</p>

<dl>
<dt>--daemonize</dt><dd><p>Send the process into the background. This is the default.</p></dd>
<dt>--no-daemonize</dt><dd><p>Do not send the process into the background.</p></dd>
<dt class="flush">--debug</dt><dd><p>Enable full debugging.</p></dd>
<dt class="flush">--help</dt><dd><p>Print this help message.</p></dd>
<dt>--logdest</dt><dd><p>Where to send messages. Choose between syslog, the console, and a log
file. Defaults to sending messages to syslog, or the console if
debugging or verbosity is enabled.</p></dd>
<dt>--verbose</dt><dd><p>Enable verbosity.</p></dd>
<dt>--version</dt><dd><p>Print the puppet version number and exit.</p></dd>
<dt>--compile</dt><dd><p>Compile a catalogue and output it in JSON from the puppet master. Uses
facts contained in the $vardir/yaml/ directory to compile the catalog.</p></dd>
</dl>


<h2 id="EXAMPLE">EXAMPLE</h2>

<p>  puppet master</p>

<h2 id="DIAGNOSTICS">DIAGNOSTICS</h2>

<p>When running as a standalone daemon, puppet master accepts the
following signals:</p>

<dl>
<dt class="flush">SIGHUP</dt><dd>Restart the puppet master server.</dd>
<dt>SIGINT and SIGTERM</dt><dd>Shut down the puppet master server.</dd>
<dt class="flush">SIGUSR2</dt><dd>Close file descriptors for log files and reopen them. Used with logrotate.</dd>
</dl>


<h2 id="AUTHOR">AUTHOR</h2>

<p>Luke Kanies</p>

<h2 id="COPYRIGHT">COPYRIGHT</h2>

<p>Copyright (c) 2011 Puppet Labs, LLC Licensed under the Apache 2.0 License</p>

</div>
